使用更轻量的mjson实现爬虫模块，完全代替fastjson2和webmagic